White Space Fix between header and trust- line

--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -4,9 +4,9 @@
   background-size: auto;
   justify-content: center;
   align-items: center;
-  /* height: 80vh; */
+  height: 75vh;
   margin-top: 8vh;
-  padding: 40px 3% 0;
+  padding: 2vh 3% 0;
   display: flex;
   position: static;
   overflow: hidden;
@@ -143,7 +143,6 @@ h1 {
   .cus-header {
     height: auto;
     margin-top: 50px;
-    padding-top: 80px;
     padding-bottom: 30px;
     overflow: hidden;
   }
